# cpp_embedded_stm32_project

./: CMakeLists.txt  arm-none-eabi-gpp.cmake  chat.json  cortex_debug_minimal.cfg  embedded_CMakeLists.txt  gnu_CMakeLists.txt  linker.ld  main.cpp  main_expanded  sample_linker_script.ld
app/: exp1_toggle_push_pull_led.cpp
app/stm32f103xx/: clc_board.h  main.cpp
app/stm32f407xx/: main.cpp  stm_discovery_board.h
baremetal/: exp1_toggle_push_pull_led.cpp  final.elf  final.map  led_log  linker.ld  main.c  main_log  makefile  startup.c  stm32f407xx.h  stm32f407xx_gpio_driver.cpp  stm32f407xx_gpio_driver.h
hal/stm32f103xx/: linker.ld  startup.c  stm32f103t8.h
hal/stm32f103xx/inc/: stm32f103xx.h  stm32f103xx_gpio_driver.h  stm32f103xx_rcc_driver.h  stm32f103xx_usart_driver.h
hal/stm32f103xx/src/: stm32f103xx.cpp  stm32f103xx_gpio_driver.cpp  stm32f103xx_rcc_driver.cpp  stm32f103xx_usart_driver.cpp
hal/stm32f407xx/: linker.ld  startup.c
hal/stm32f407xx/inc/: stm32f407xx.h  stm32f407xx_gpio_driver.h  stm32f407xx_rcc_driver.h  stm32f407xx_usart_driver.h
hal/stm32f407xx/src/: stm32f407xx.cpp  stm32f407xx_gpio_driver.cpp  stm32f407xx_rcc_driver.cpp  stm32f407xx_usart_driver.cpp
resourceshell/: IOResource.cpp  IOResource.h  Parser.cpp  Parser.h  ResourceEntry.h  ResourceHandler.h  ResourceShellResource.cpp  ResourceShellResource.h  Searchable.h  ShellErr.h  config.h  macro_enum_map.h  resource_shell_config.h
resourceshell/boost/static_string/: config.hpp  static_string.hpp
